// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crm/contacts/hubspot Create should perform successfully 1`] = `
Ok {
  "value": Object {
    "id": "651",
  },
}
`;

exports[`crm/contacts/hubspot Search should perform successfully 1`] = `
Ok {
  "value": Array [],
}
`;

exports[`crm/contacts/hubspot Search should return error for unknown operator 1`] = `
Err {
  "error": "Input validation failed:
Path: input.operator
Error: Invalid enum value: \\"%\\"
Path: input.operator
Error: Invalid enum value: \\"%\\"",
}
`;

exports[`crm/contacts/hubspot Update should perform successfully 1`] = `
Ok {
  "value": Object {
    "id": "401",
  },
}
`;

exports[`crm/contacts/hubspot Update should return error if id is missing 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Missing field\\",
  \\"detail\\": \\"ID is missing in input values\\"
}
AST Path: definitions[1].statements[0]
Original Map Location: Line 52, column 3",
}
`;
